2010-06-15  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (venv_out) [DEBUG_SPVW]: add

2010-06-13  Sam Steingold  <sds@gnu.org>

	* stream.d (BUILT-IN-STREAM-ELEMENT-TYPE): return NIL for an empty
	CONCATENATED-STREAM (bug#3014921)

2010-06-10  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (POSIX:LOADAVG): fix a GC-safety bug;
	use round() for integer returns

2010-06-10  Sam Steingold  <sds@gnu.org>

	* io.d (STRUCTURE-READER): fix g++ compilation and a GC-safety bug

2010-06-10  Sam Steingold  <sds@gnu.org>

	make OS:BOGOMIPS work even when clisp is compiled with -O
	* modules/syscalls/bogomips.c: extract from calls.c
	* modules/syscalls/calls.c (BOGOMIPS): call extern bogomips()
	* modules/syscalls/Makefile.in (bogomips.o): compile without
	$(CPPFLAGS) and $(CFLAGS) to avoid all optimizations
	(GENERATED): add bogomips.o
	* modules/syscalls/configure.in: do not check for clock,
	it is always present on all platforms
	* modules/syscalls/link.sh.in (NEW_FILES): add bogomips.o

2010-06-09  Sam Steingold  <sds@gnu.org>

	update gnulib
	* modules/regexp/gllib/regex_internal.c:
	* modules/regexp/gllib/regex_internal.h:
	* modules/syscalls/gllib/time.in.h:
	* modules/syscalls/glm4/time_h.m4:
	* build-aux/c++defs.h, build-aux/warn-on-use.h:
	* glm4/fcntl-o.m4, glm4/gnulib-comp.m4, glm4/iconv.m4:
	* glm4/langinfo_h.m4, glm4/lib-link.m4, glm4/stddef_h.m4:
	* glm4/stdint.m4, glm4/wchar_h.m4, glm4/wctype_h.m4: update
	* glm4/libunistring-base.m4: add
	* gllib/uniname.in.h: replaces gllib/uniname.h
	* gllib/unitypes.in.h: replaces gllib/unitypes.h
	* gllib/uniwidth.in.h: replaces gllib/uniwidth.h
	* makemake.in (UNICODE_EXTRA): remove these 3 files

2010-06-09  Sam Steingold  <sds@gnu.org>

	* makemake.in (bench): use base, not boot, for benchmarking
	because it includes syscalls with bogomips

2010-06-09  Sam Steingold  <sds@gnu.org>

	* makemake.in (MAKE): remove unused and unset variable
	(GNU_MAKE): fix setting and usage
